--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Fintnery Platform{% endblock %}</title>
+    <!-- Bootstrap para estilos visuales -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Tus propios estilos -->
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
