--- a/templates/marketplace_general.html
+++ b/templates/marketplace_general.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Marketplace General{% endblock %}
+{% block title %}Marketplace Middle Office{% endblock %}
 
 {% block content %}
-<h2>Marketplace de Facturas</h2>
+<h2>Marketplace de Middle Office</h2>
 
 {% if facturas %}
 <table class="table">
