--- a/templates/login_proveedor.html
+++ b/templates/login_proveedor.html
@@ -12,12 +12,12 @@
 <form method="post" action="/proveedor/login">
     <div>
         <label for="usuario">Usuario:</label><br>
-        <input type="text" id="usuario" name="usuario" required>
+        <input type="text" id="usuario" name="usuario" required autocomplete="off" style="width: 250px;">
     </div>
 
     <div>
         <label for="clave">Contraseña:</label><br>
-        <input type="password" id="clave" name="clave" required>
+        <input type="password" id="clave" name="clave" required autocomplete="off" style="width: 250px;">
     </div>
 
     <div style="margin-top: 10px;">
