--- a/templates/registro_proveedor.html
+++ b/templates/registro_proveedor.html
@@ -5,25 +5,29 @@
 {% block content %}
 <h2>Registro de Proveedor</h2>
 
+{% if error %}
+<p style="color:red;">{{ error }}</p>
+{% endif %}
+
 <form method="post" action="/proveedor/registro">
     <div>
         <label for="nombre">Nombre:</label><br>
-        <input type="text" id="nombre" name="nombre" required>
+        <input type="text" id="nombre" name="nombre" required autocomplete="off" style="width: 250px;">
     </div>
 
     <div>
         <label for="rut">RUT:</label><br>
-        <input type="text" id="rut" name="rut" required>
+        <input type="text" id="rut" name="rut" required autocomplete="off" style="width: 250px;">
     </div>
 
     <div>
         <label for="usuario">Usuario:</label><br>
-        <input type="text" id="usuario" name="usuario" required>
+        <input type="text" id="usuario" name="usuario" required autocomplete="off" style="width: 250px;">
     </div>
 
     <div>
         <label for="clave">Contraseña:</label><br>
-        <input type="password" id="clave" name="clave" required>
+        <input type="password" id="clave" name="clave" required autocomplete="off" style="width: 250px;">
     </div>
 
     <div style="margin-top: 10px;">
